<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/honeydew"
    android:orientation="vertical"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:background="#00BCD4"
        android:gravity="center|start"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="111dp"
            android:layout_height="172dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/login_text"
            android:src="@drawable/login_logo">

        </ImageView>

        <TextView
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Little Flower School \n Sector 9 Gida, Gorakhpur \n www.lfsgidaonline.com \n +917880715889"
            android:textColor="@color/light_yellow"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>
    <ScrollView
        android:id="@+id/linearlayout_parentscroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout

            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/honeydew"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/login"

                android:textColor="#C62828"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"

                android:textColor="@color/black"

                android:text="@string/user_id_adm_no" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="30dp"

                android:layout_marginRight="30dp"
                android:gravity="center"
                app:counterEnabled="true"
                app:counterMaxLength="30">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/adm_no"
                    android:inputType="text"

                    android:textColor="@color/black">


                </com.google.android.material.textfield.TextInputEditText>

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_date_of_birth" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"

                android:textColor="@color/black"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dd_mm_yyyy"
                    android:inputType="text">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="100dp"
                android:gravity="center"
                android:text="@string/login" />

            <ProgressBar
                android:id="@+id/pbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
